ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: static-ingress
 namespace: static
 annotations:
   kubernetes.io/ingress.class: nginx
spec:
 rules:
 - host: prem-static.premdesigns.in
   http:
     paths:
     - path:
       backend:
         serviceName: static-svc
         servicePort: 80
